# waddle

./: .dockerignore  .editorconfig  .envrc  .gitignore  AGENTS.md  CLAUDE.md  CLOUDFLARE_DEPLOYMENT_STRATEGY.md  Cargo.toml  Containerfile  Dockerfile  Plan.md  README.md  TODO.md  bunfig.toml  devenv.nix  docker-compose.yml  env.cue  package-lock.json  package.json
.claude/: settings.local.json
.moon/: tasks.yml  toolchain.yml  workspace.yml
app/crates/core/: Cargo.toml
app/crates/core/locales/en-US/: commands.ftl  errors.ftl  main.ftl
app/crates/core/src/: config.rs  error.rs  i18n.rs
app/crates/gui-backend/: Cargo.toml  tauri.conf.json
app/crates/gui-backend/src/: main.rs
app/crates/integration/: Cargo.toml
app/crates/integration/src/tests/: github_test.rs
app/crates/messaging/: Cargo.toml
app/crates/messaging/src/: lib.rs
app/crates/presence/: Cargo.toml
app/crates/presence/src/: lib.rs
app/crates/roster/: Cargo.toml
app/crates/storage/: Cargo.toml
app/crates/storage/migrations/: 001_initial.sql  002_add_mam_sync_state.sql  003_add_offline_queue.sql  004_add_embeds_column.sql
app/crates/test-support/: Cargo.toml
app/crates/test-support/src/: xmpp.rs
app/crates/tui/: Cargo.toml
app/crates/tui/src/: app.rs  error.rs  state.rs
apps/: README.md
certs/: server.crt
clusters/: README.md
crates/mam/: Cargo.toml
crates/mam/src/: lib.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: lib.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: kv.rs  lib.rs  registry.rs  runtime.rs
crates/roster/: Cargo.toml
crates/roster/src/: lib.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/waddle-server/: Cargo.toml
crates/waddle-server/src/: config.rs  main.rs  telemetry.rs  vcard.rs
crates/waddle-server/src/auth/: atproto.rs  did.rs  dpop.rs  jid.rs  mod.rs  native.rs  session.rs
crates/waddle-server/src/db/: blocking.rs  migrations.rs  mod.rs  pool.rs  roster.rs
crates/waddle-server/src/messages/: mod.rs  repository.rs  types.rs
crates/waddle-server/src/permissions/: check.rs  mod.rs  schema.rs  tuple.rs
crates/waddle-server/src/server/: mod.rs  xmpp_state.rs
crates/waddle-server/src/server/routes/: auth.rs  auth_page.rs  channels.rs  device.rs  mod.rs  permissions.rs  uploads.rs  waddles.rs  websocket.rs  well_known.rs  xmpp_oauth.rs
crates/waddle-xmpp/: Cargo.toml
crates/waddle-xmpp-xep-github/: Cargo.toml
crates/waddle-xmpp-xep-github/src/: client.rs  detect.rs  embed.rs  enrich.rs  lib.rs
crates/waddle-xmpp/src/: connection.rs  error.rs  isr.rs  lib.rs  metrics.rs  parser.rs  prometheus.rs  routing.rs  server.rs  stream.rs  stream_management.rs  types.rs
crates/waddle-xmpp/src/auth/: mod.rs  scram.rs
crates/waddle-xmpp/src/carbons/: mod.rs
crates/waddle-xmpp/src/disco/: info.rs  items.rs  mod.rs
crates/waddle-xmpp/src/mam/: mod.rs  query.rs  storage.rs
crates/waddle-xmpp/src/muc/: admin.rs  affiliation.rs  federation.rs  messages.rs  mod.rs  owner.rs  presence.rs  room_registry.rs
crates/waddle-xmpp/src/presence/: mod.rs  subscription.rs
crates/waddle-xmpp/src/pubsub/: mod.rs  node.rs  pep.rs  stanzas.rs  storage.rs
crates/waddle-xmpp/src/registry/: connection_registry.rs  mod.rs
crates/waddle-xmpp/src/roster/: mod.rs  storage.rs
crates/waddle-xmpp/src/s2s/: connection.rs  dialback.rs  dns.rs  listener.rs  mod.rs  outbound.rs  pool.rs
crates/waddle-xmpp/src/stream_management/: mod.rs  session_registry.rs  unacked_queue.rs
crates/waddle-xmpp/src/xep/: mod.rs  xep0049.rs  xep0054.rs  xep0077.rs  xep0115.rs  xep0191.rs  xep0249.rs  xep0352.rs  xep0363.rs  xep0402.rs
crates/waddle-xmpp/tests/: federated_muc.rs  interop_test.rs  s2s_integration.rs  xep0479_compliance.rs
crates/waddle-xmpp/tests/common/: mod.rs
crates/xmpp/: Cargo.toml
crates/xmpp/src/: carbons.rs  connection.rs  lib.rs  outbound.rs  pipeline.rs  sasl.rs  stream_management.rs  transport.rs
crates/xmpp/src/processors/: mam.rs  message.rs  muc.rs  presence.rs
cue.mod/: module.cue
cuenv/: data-service.cue
docs/: MANUAL-SETUP-AND-TESTING.md  PROJECT_MANAGEMENT.md  README.md  RUST_CRATES.md  cert-manager-setup.md  flux-workflow.md  (+10 more)
server/crates/waddle-cli/: Cargo.toml
server/crates/waddle-cli/src/: api.rs  app.rs  config.rs  embed.rs  event.rs  login.rs  main.rs  sanitize.rs  stanza.rs  xmpp.rs
server/crates/waddle-cli/src/ui/: layout.rs  messages.rs  mod.rs  sidebar.rs
server/crates/waddle-cli/tests/: xep0045_muc.rs  xep0313_mam.rs
server/crates/waddle-ecdysis/: Cargo.toml
server/crates/waddle-ecdysis/src/: lib.rs  listener.rs
server/crates/waddle-xmpp-xep-github/: Cargo.toml
server/crates/waddle-xmpp-xep-github/src/: client.rs
ws/: .envrc  CLAUDE.md  Cargo.toml
ws/.github/workflows/: container-image.yml  xmpp-compliance.yml
ws/charts/waddle-server/templates/: deployment.yaml  serviceaccount.yaml
ws/crates/waddle-cli/src/: app.rs
ws/crates/waddle-cli/src/ui/: messages.rs
ws/crates/waddle-ecdysis/src/: shutdown.rs
ws/crates/waddle-server/src/auth/: atproto.rs
ws/crates/waddle-server/src/db/: migrations.rs  roster.rs
ws/crates/waddle-server/src/server/: mod.rs
ws/crates/waddle-server/src/server/routes/: auth.rs  uploads.rs  websocket.rs
ws/crates/waddle-xmpp/src/: connection.rs  lib.rs  stream.rs  types.rs
ws/crates/waddle-xmpp/src/auth/: scram.rs
ws/crates/waddle-xmpp/src/carbons/: mod.rs
ws/crates/waddle-xmpp/src/disco/: mod.rs
ws/crates/waddle-xmpp/src/muc/: affiliation.rs  federation.rs
ws/crates/waddle-xmpp/src/registry/: connection_registry.rs
ws/crates/waddle-xmpp/src/xep/: mod.rs  xep0048.rs  xep0223.rs
ws/crates/waddle-xmpp/tests/: messaging_e2e.rs
ws/docs/adrs/: 0004-turso-libsql-database.md  0006-xmpp-protocol.md  0008-kameo-actors.md  0012-transport-encryption.md  0015-dual-authentication.md
ws/docs/rfcs/: 0001-waddles.md  0005-ephemeral-content.md  0013-moderation.md
ws/docs/specs/: s2s-federation.md
ws/scripts/ralph-loop/src/plan/: index.ts
(+919 files in other folders)
