[package]
name = "waddle-mam"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Message Archive Management (XEP-0313) for Waddle"

[features]
default = ["native"]
native = ["waddle-core/native", "waddle-storage/native", "waddle-xmpp/native", "dep:tokio"]
web = ["waddle-core/web", "waddle-storage/web", "waddle-xmpp/web"]

[dependencies]
waddle-core = { workspace = true, default-features = false }
waddle-storage = { workspace = true, default-features = false }
waddle-xmpp = { workspace = true, default-features = false }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
tokio-test = { workspace = true }
mockall = { workspace = true }
tracing-test = { workspace = true }
