[package]
name = "waddle-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared fixture loading helpers for Waddle tests"

[dependencies]

[dev-dependencies]
serde_json = { workspace = true }
toml = { workspace = true }
