[package]
name = "waddle-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Waddle Social - Backend HTTP/XMPP server"

[dependencies]
# Core Runtime & Async
tokio = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }

# Web Framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }

# Database
libsql = { workspace = true }
sqlx = { workspace = true }

# Actor Framework
kameo = { workspace = true }

# XMPP Server
waddle-xmpp = { path = "../waddle-xmpp" }
jid = { workspace = true }
dashmap = { workspace = true }

# XMPP Client (for testing/integration)
xmpp = { workspace = true }
xmpp-parsers = { workspace = true }

# Object Storage
object_store = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# CLI Arguments
clap = { workspace = true }
config = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Security/Crypto
rustls = { workspace = true, features = ["ring"] }
hmac = { workspace = true }
sha2 = { workspace = true }
p256 = { workspace = true }
elliptic-curve = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
hickory-resolver = { workspace = true }
lru = { workspace = true }
percent-encoding = "2.3"
urlencoding = "2.1"
html-escape = "0.2"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
http-body-util = "0.1"

[[bin]]
name = "waddle-server"
path = "src/main.rs"
