[package]
name = "waddle-xmpp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Waddle Social - Native XMPP server library"

[dependencies]
# Core Runtime & Async
tokio = { workspace = true }
futures = { workspace = true }

# Actor Framework
kameo = { workspace = true }

# XMPP
tokio-xmpp = { workspace = true }
jid = { workspace = true }
xmpp-parsers = { workspace = true }
minidom = { workspace = true }
rxml = { workspace = true }

# Concurrent Data Structures
dashmap = { workspace = true }

# TLS
rustls = { workspace = true, features = ["ring"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls-pemfile = "2.2"

# Serialization
serde = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
opentelemetry = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tokio = { workspace = true }
rcgen = "0.13"
tempfile = "3.14"
tracing-subscriber = { workspace = true }
