[package]
name = "waddle-xmpp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "XMPP connection lifecycle, SASL, and stanza pipeline for Waddle"

[features]
default = ["native"]
native = [
    "waddle-core/native",
    "dep:tokio",
    "dep:tokio-xmpp",
    "dep:tokio-rustls",
    "dep:rustls",
]
web = [
    "waddle-core/web",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]

[dependencies]
waddle-core = { workspace = true, default-features = false }
tokio = { workspace = true, optional = true }
futures = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
xmpp-parsers = { workspace = true }
sasl = { workspace = true }
tokio-xmpp = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true, features = ["rustls-tls-webpki-roots"] }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["BinaryType", "Blob", "CloseEvent", "ErrorEvent", "MessageEvent", "Response", "WebSocket", "Window"] }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
tracing-test = { workspace = true }
