[package]
name = "waddle-xmpp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "XMPP connection lifecycle, SASL, and stanza pipeline for Waddle"

[features]
default = ["native"]
native = [
    "waddle-core/native",
    "dep:bytes",
    "dep:tokio",
    "dep:tokio-util",
    "dep:tokio-xmpp",
    "dep:tokio-rustls",
    "dep:rustls",
]
web = [
    "waddle-core/web",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]

[dependencies]
waddle-core = { workspace = true, default-features = false }
bytes = { version = "1", optional = true }
tokio = { version = "1", optional = true, default-features = false, features = ["io-util", "macros", "rt", "sync", "time"] }
tokio-util = { version = "0.7", optional = true, features = ["codec"] }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
xmpp-parsers = { workspace = true }
sasl = { workspace = true }
tokio-xmpp = { workspace = true, optional = true, features = ["insecure-tcp"] }
tokio-rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["BinaryType", "Blob", "CloseEvent", "ErrorEvent", "MessageEvent", "Response", "WebSocket", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-tungstenite = { workspace = true, optional = true, features = ["rustls-tls-webpki-roots"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
tracing-test = { workspace = true }
