[package]
name = "waddle-presence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Presence tracking and management for Waddle"

[features]
default = ["native"]
native = ["waddle-core/native", "waddle-xmpp/native", "tokio"]
web = ["waddle-core/web", "waddle-xmpp/web"]

[dependencies]
waddle-core = { workspace = true, default-features = false }
waddle-xmpp = { workspace = true, default-features = false }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
tracing-test = { workspace = true }
tokio = { workspace = true }
