[package]
name = "waddle-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Waddle Social - Terminal UI client"

[dependencies]
# Core Runtime & Async
tokio = { workspace = true }
futures = { workspace = true }

# CLI TUI
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }

# XMPP Client
xmpp = { workspace = true }
native-tls = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP Client (for API calls)
reqwest = { workspace = true }

# CLI Arguments & Config
clap = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
testcontainers = { workspace = true }

# Markdown/Syntax
pulldown-cmark = { workspace = true }
syntect = { workspace = true }

[[bin]]
name = "waddle"
path = "src/main.rs"

[[bin]]
name = "compliance-quick"
path = "src/bin/compliance_quick.rs"
